feat: Se agregan nuevas correcciones en documentación swagger. #10
