# controllers/gestion_resoluciones.go
@@ -49,7 +49,7 @@ func (c *GestionResolucionesController) GetResolucionesAprobadas() {
 	}()
 	var resolucion_vinculacion_aprobada []models.ResolucionVinculacion
 	var err3 map[string]interface{}
-	if (limit == 0) || (len(query) == 0) || (offset == 0) || (err1 != nil) || (err2 != nil) {
+	if (limit == 0) || (offset == 0) || (err1 != nil) || (err2 != nil) {
 		panic(map[string]interface{}{"funcion": "GetResolucionesAprobadas", "err": "Error en los parametros de ingreso", "status": "400"})
 	}
 
@@ -82,7 +82,7 @@ func (c *GestionResolucionesController) GetResolucionesInscritas() {
 		if err := recover(); err != nil {
 			logs.Error(err)
 			localError := err.(map[string]interface{})
-			c.Data["message"] = (beego.AppConfig.String("appname") + "/" + "CertificacionController" + "/" + (localError["funcion"]).(string))
+			c.Data["message"] = (beego.AppConfig.String("appname") + "/" + "GestionResolucionesController" + "/" + (localError["funcion"]).(string))
 			c.Data["data"] = (localError["err"])
 			if status, ok := localError["status"]; ok {
 				c.Abort(status.(string))
@@ -92,7 +92,7 @@ func (c *GestionResolucionesController) GetResolucionesInscritas() {
 		}
 	}()
 	var resolucion_vinculacion []models.ResolucionVinculacion
-	if (limit == 0) || (len(query) == 0) || (offset == 0) || (err1 != nil) || (err2 != nil) {
+	if (limit == 0) || (offset == 0) || (err1 != nil) || (err2 != nil) {
 		panic(map[string]interface{}{"funcion": "GetResolucionesInscritas", "err": "Error en los parametros de ingreso", "status": "400"})
 	}
 	var err3 map[string]interface{}
@@ -108,6 +108,7 @@ func (c *GestionResolucionesController) GetResolucionesInscritas() {
 // InsertarResolucionCompleta ...
 // @Title InsertarResolucionCompleta
 // @Description create InsertarResolucionCompleta
+// @Param	body		body 	models.ObjetoResolucion	true		"body for Objeto Resolucion content"
 // @Success 201 {int} models.Resolucion
 // @Failure 400 bad request
 // @Failure 404 aborted by server
@@ -117,7 +118,7 @@ func (c *GestionResolucionesController) InsertarResolucionCompleta() {
 		if err := recover(); err != nil {
 			logs.Error(err)
 			localError := err.(map[string]interface{})
-			c.Data["message"] = (beego.AppConfig.String("appname") + "/" + "CertificacionController" + "/" + (localError["funcion"]).(string))
+			c.Data["message"] = (beego.AppConfig.String("appname") + "/" + "GestionResolucionesController" + "/" + (localError["funcion"]).(string))
 			c.Data["data"] = (localError["err"])
 			if status, ok := localError["status"]; ok {
 				c.Abort(status.(string))
@@ -126,9 +127,11 @@ func (c *GestionResolucionesController) InsertarResolucionCompleta() {
 			}
 		}
 	}()
-	var v models.ObjetoResolucion
+	var v interface{}
+	var w models.ObjetoResolucion
 	if err1 := json.Unmarshal(c.Ctx.Input.RequestBody, &v); err1 == nil {
-		if id_resolucion_creada, control, err2 := helpers.InsertarResolucionCompleta(v); err2 == nil || control == false {
+		w = v.(models.ObjetoResolucion)
+		if id_resolucion_creada, control, err2 := helpers.InsertarResolucionCompleta(w); err2 == nil || control == false {
 			c.Ctx.Output.SetStatus(200)
 			c.Data["json"] = map[string]interface{}{"Success": true, "Status": "200", "Message": "Successful", "Data": id_resolucion_creada}
 		} else {
